--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,18 +1,4 @@
-<%#
-Copyright 2008-2013 Concur Technologies, Inc.
 
-Licensed under the Apache License, Version 2.0 (the "License"); you may
-not use this file except in compliance with the License. You may obtain
-a copy of the License at
-
-  http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
-WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
-License for the specific language governing permissions and limitations
-under the License.
-%>
 <% language_tabs = current_page.data.language_tabs || [] %>
 <!doctype html>
 <html>
@@ -20,13 +6,14 @@ under the License.
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title><%= current_page.data.title || "API Documentation" %></title>
+    <title><%= current_page.data.title || "Steemit API Documentation" %></title>
 
     <style>
       <%= Rouge::Themes::Base16::Monokai.render(:scope => '.highlight') %>
     </style>
     <%= stylesheet_link_tag :screen, media: :screen %>
     <%= stylesheet_link_tag :print, media: :print %>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <% if current_page.data.search %>
       <%= javascript_include_tag  "all" %>
     <% else %>
@@ -35,14 +22,28 @@ under the License.
   </head>
 
   <body class="<%= page_classes %>" data-languages="<%=h language_tabs.map{ |lang| lang.is_a?(Hash) ? lang.keys.first : lang }.to_json %>">
-    <a href="#" id="nav-button">
+   <div class="navbar-container">
+    <nav class="navbar">
+      <div class="logo">
+        <a href="https://github.com/steemit/steemit-docs"><img class="logo-img" src="images/logo.png"></a>
+        <span class="logo-text">Steemit | Developers</span>
+        <div class="pull-right sub-menu-show">
+          <ul class="sub-menu">
+            <li><a href="https://github.com/steemit/steemit-docs" target="_blank">Documentation</a></li>
+            <li><a href="https://github.com/steemit/steemit-docs" target="_blank">Github</a></li>
+          </ul>
+        </div>
+      </div>
+      <a href="#" id="nav-button">
       <span>
         NAV
         <%= image_tag('navbar.png') %>
       </span>
-    </a>
+      </a>
+
+    </nav>
+   </div>
     <div class="tocify-wrapper">
-      <%= image_tag "logo.png" %>
       <% if language_tabs %>
         <div class="lang-selector">
           <% language_tabs.each do |lang| %>
@@ -55,6 +56,7 @@ under the License.
         </div>
       <% end %>
       <% if current_page.data.search %>
+        <h1 class="api-heading">API Documentation</h1>
         <div class="search">
           <input type="text" class="search" id="input-search" placeholder="Search">
         </div>
